--- a/Homepage_folder/Homepage_stylesheet.css
+++ b/Homepage_folder/Homepage_stylesheet.css
@@ -10,3 +10,18 @@ h1 {
     font-size: 300%;
     align-self:center;
 }
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #7aa8b7;
+    border-radius: 6px;
+    outline: none;
+    transition: 0.3s;
+  }
+  .button:hover {
+    background-color: #c2c7c7;
+  }
