--- a/Login_folder/Login_stylesheet.css
+++ b/Login_folder/Login_stylesheet.css
@@ -7,7 +7,7 @@ h1 {
     font-size: 160%;
     text-align: center;
 }
-.label {
+.logintext{
     background-color: rgb(227, 218, 217);
     color: white;
     border: 2px solid black;
@@ -15,3 +15,8 @@ h1 {
     padding: 2px;
     width: 100px;
 }
+.submitbutton{
+    color:cornsilk;
+}
+    
+
