--- a/Homepage_folder/Homepage_stylesheet.css
+++ b/Homepage_folder/Homepage_stylesheet.css
@@ -44,7 +44,7 @@ h1 {
     color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 300%;
-    align-self:center;
+    align-self:stretch;
 }
 
 .button {
