--- a/Homepage_folder/Homepage_stylesheet.css
+++ b/Homepage_folder/Homepage_stylesheet.css
@@ -1,7 +1,9 @@
 body {
     background-color: #fffff0;
-    background-image: url("https://i.pinimg.com/564x/b6/22/f3/b622f3278885cbc049557b49f0ec5371.jpg");
-}
+    /* background-image: url("https://i.pinimg.com/564x/b6/22/f3/b622f3278885cbc049557b49f0ec5371.jpg");
+    background-size: 40%;
+    background-repeat: no-repeat */
+  }
 
 ul {
   list-style-type: none;
@@ -34,17 +36,28 @@ li a:hover {
 }
 
 ul {
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
 }
 
 h1 {
-    padding:20px;
+    margin-left: 25%;
+    margin-top: 5%;
     color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 300%;
     align-self:stretch;
+}
+
+h2 {
+  margin-left: 35%;
+  margin-top: 0%;
+  color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 100%;
+  align-self:stretch;
+
 }
 
 .button {
@@ -61,3 +74,98 @@ h1 {
   .button:hover {
     background-color: #FFFFFF;
   }
+
+  * {box-sizing:border-box}
+
+  /* Slideshow container */
+  .slideshow-container {
+    position: relative;
+    margin-top: 5%;
+    margin-left: 15%;
+    width: 100%;
+    max-width: 1000px;
+    min-width: 1000px;
+    height:100%;
+    max-height: 550px;
+    min-height: 550px;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -10px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    top: -0%;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
+.slideshow_image {
+  width: 100%;
+  margin-top: 0px;
+}
+
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
