--- a/Homepage_folder/Homepage_stylesheet.css
+++ b/Homepage_folder/Homepage_stylesheet.css
@@ -51,7 +51,7 @@ h1 {
 }
 
 h2 {
-  margin-left: 35%;
+  margin-left: 30%;
   margin-top: 0%;
   color: black;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -169,3 +169,42 @@ h2 {
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
+
+.footer {
+  position: static;
+  left: 0;
+  bottom: auto;
+  width: 100%;
+  height: 350px;
+  margin-bottom: 1px;
+  background-color: #C4AE8C;
+  color: white;
+  text-align: center;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 25%;
+  text-align: center;
+}
+
+p{
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 100%;
+  align-self:stretch;
+}
+
+h3{
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 100%;
+  align-self:stretch;
+}
+
+a:link, a:visited {
+  color: white;
+}
