--- a/FAQ/FAQ.css
+++ b/FAQ/FAQ.css
@@ -5,20 +5,23 @@ body {
     background-repeat: no-repeat */
   }
 
-ul {
+.navbar_list {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: #C4AE8C;
   font-family: Arial, Helvetica, sans-serif;
+  position: sticky;
+  top: 0;
+  width: 100%;
 }
 
-.navbar_list {
+.navbar_item {
   float: left;
 }
 
-.navbar_list a {
+.navbar_item a {
   display: block;
   color: white;
   text-align: center;
@@ -27,19 +30,10 @@ ul {
 }
 
 /* Change the link color to #111 (black) on hover */
-.navbar_list a:hover {
+.navbar_item a:hover {
   background-color: #D9C7AA;
 }
 
-.active {
-  background-color: #D9C7AA;
-}
-
-ul {
-  position: sticky;
-  top: 0;
-  width: 100%;
-}
 
 h1 {
     margin-left: 25%;
@@ -51,14 +45,40 @@ h1 {
 }
 
 h2 {
-  margin-left: 30%;
-  margin-top: 0%;
+  margin-left: 0%;
+  margin-top: 5%;
   color: black;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 100%;
   align-self:stretch;
 
 }
+
+h3 {
+  margin-left: 0%;
+  margin-top: 5%;
+  color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 150%;
+  align-self:stretch;
+}
+
+h4 {
+  margin-left: 0%;
+  margin-top: 0%;
+  color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 100%;
+  align-self:stretch;
+}
+
+p{
+  color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 100%;
+  align-self:stretch;
+}
+
 
 .button {
     display: inline-block;
@@ -81,3 +101,41 @@ h2 {
 a:link, a:visited {
   color: white;
 }
+
+/* Accordion */
+.accordion {
+  background-color: #eee;
+  color: #000000;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+  }
+
+  .active, .accordion:hover {
+  background-color: #ac874c;
+  }
+
+  .accordion:after {
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+  }
+
+  .active:after {
+  content: "\2212";
+  }
+
+  .panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  }
