--- a/Homepage_stylesheet.css
+++ b/Homepage_stylesheet.css
@@ -42,7 +42,7 @@ width: 100%;
 }
 
 h1 {
-  margin-left: 25%;
+  text-align: center;
   margin-top: 5%;
   color: black;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -51,7 +51,7 @@ h1 {
 }
 
 h2 {
-margin-left: 30%;
+text-align: center;
 margin-top: 0%;
 color: black;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -81,7 +81,8 @@ align-self:stretch;
 .slideshow-container {
   position: relative;
   margin-top: 5%;
-  margin-left: 15%;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   max-width: 1000px;
   min-width: 1000px;
