--- a/FAQ/FAQ.css
+++ b/FAQ/FAQ.css
@@ -34,6 +34,10 @@ body {
   background-color: #D9C7AA;
 }
 
+/* Change the link color to black*/
+a:link, a:visited { 
+  color: black;
+} 
 
 h1 {
     margin-left: 25%;
@@ -79,7 +83,6 @@ p{
   align-self:stretch;
 }
 
-
 .button {
     display: inline-block;
     padding: 10px 20px;
@@ -117,7 +120,7 @@ a:link, a:visited {
   }
 
   .active, .accordion:hover {
-  background-color: #ac874c;
+  background-color: #D9C7AA;
   }
 
   .accordion:after {
