--- a/Homepage_stylesheet.css
+++ b/Homepage_stylesheet.css
@@ -177,7 +177,7 @@ position: static;
 left: 0;
 bottom: auto;
 width: 100%;
-height: 350px;
+height: 330px;
 margin-bottom: 1px;
 background-color: #C4AE8C;
 color: white;
@@ -191,7 +191,8 @@ display: flex;
 div.column {
 flex: 25%;
 text-align: center;
-margin-top: 2%
+margin-top: 2.5%;
+margin-bottom: 2%;
 }
 
 h3.footer {
