--- a/Homepage_stylesheet.css
+++ b/Homepage_stylesheet.css
@@ -179,6 +179,8 @@ bottom: auto;
 width: 100%;
 height: 330px;
 margin-bottom: 1px;
+margin-left: 0%;
+margin-right: 0%;
 background-color: #C4AE8C;
 color: white;
 text-align: center;
