--- a/Homepage_stylesheet.css
+++ b/Homepage_stylesheet.css
@@ -7,16 +7,14 @@ body {
 
 /* Navigatie balk */
 .navbar {
+position: sticky;
 list-style-type: none;
 margin: 0;
 padding: 0;
 overflow: hidden;
 background-color: #C4AE8C;
 font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar{
-position: sticky;
+z-index: 1000;
 top: 0;
 width: 100%;
 }
@@ -37,7 +35,6 @@ text-decoration: none;
 li a:hover {
 background-color: #D9C7AA;
 }
-
 
 p{
   color: white;
@@ -84,7 +81,7 @@ align-self:stretch;
   background-color: #FFFFFF;
 } */
 
-* {box-sizing:border-box}
+/* * {box-sizing:border-box} */
 
 /* Slideshow container */
 .slideshow-container {
