--- a/Login_folder/Login_stylesheet.css
+++ b/Login_folder/Login_stylesheet.css
@@ -1,6 +1,4 @@
-* {
-  box-sizing: border-box;
-}
+* {box-sizing: border-box;}
 
 body {
   display: flex;
@@ -12,36 +10,6 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-/* Header Styles */
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #C4AE8C;
-  font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #D9C7AA;
-}
-
-.active {
-  background-color: #D9C7AA;
-}
 
 .login-box {
   width: 300px;
@@ -49,19 +17,25 @@ li a:hover {
   background: linear-gradient(to bottom, #D9C7AA, #C4AE8C);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+  margin-top: 4%;
+  margin-bottom: 6%;
+  position: relative;
+  align-items: center;
 }
 
-.login-box h2 {
+/* .login-box h2 {
   color: #fffff0;
   font-size: 24px;
   margin-bottom: 20px;
-}
-
+  align-items: center;
+  align-self: center;
+} */
+/* 
 .login-text label {
   display: block;
   margin-bottom: 8px;
   color: #fffff0;
-}
+} */
 
 input[type="text"],
 input[type="password"] {
